[package]
name = "mio-uds-windows"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
description = "Unix Domain Sockets for mio...on Windows!"
repository = "https://github.com/Azure/mio-uds-windows"
# readme = "README"
# keywords = ""
# categories = ""
exclude = [".gitignore"]
edition = "2018"

[dependencies]
iovec = "0.1.2"
lazycell = "1"
log = "0.4.5"
mio = "0.7"

[target.'cfg(windows)'.dependencies]
miow = "0.3.6"
winapi = { version = "0.3", features = ["ntdef", "ioapiset", "minwinbase", "winbase"] }

[dev-dependencies]
bytes = "0.6"
env_logger = { version = "0.8", default-features = false }
slab = "0.4"
tempdir = "0.3"
version-sync = "0.9"

[[test]]
name = "test"
path = "test/mod.rs"
